{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 959,
  "lineage": "fe13cad9-09ab-0ff3-e751-abab4c0d196b",
  "resources": [
    {
      "module": "module.eks_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:security-group/sg-0a0ed619e9009f567",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0ed619e9009f567",
            "ingress": [
              {
                "cidr_blocks": [
                  "60.243.95.65/32"
                ],
                "description": "Allow Kubernetes API access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-dr-cluster-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-dr-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-dr-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.eks_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:security-group/sg-064af8d381ed79bbd",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064af8d381ed79bbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "60.243.95.65/32"
                ],
                "description": "Allow Kubernetes API access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-primary-cluster-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-primary-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-primary-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_bastion_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:security-group/sg-0f92bdb5a674c4b05",
            "description": "bastion security group for dr",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f92bdb5a674c4b05",
            "ingress": [
              {
                "cidr_blocks": [
                  "60.243.95.65/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dr-bastion-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-bastion-sg"
            },
            "tags_all": {
              "Name": "dr-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_bastion_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:security-group/sg-07a155db0118151aa",
            "description": "bastion security group for primary",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a155db0118151aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "60.243.95.65/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "primary-bastion-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-bastion-sg"
            },
            "tags_all": {
              "Name": "primary-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_infra_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:security-group/sg-0ea3e376917d0b6c4",
            "description": "infra security group for infra",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea3e376917d0b6c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "60.243.95.65/32"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "infra-infra-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infra-infra-sg"
            },
            "tags_all": {
              "Name": "infra-infra-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nginx_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:security-group/sg-020f45cfc0cb20fe8",
            "description": "nginx security group for dr",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f45cfc0cb20fe8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dr-nginx-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-nginx-sg"
            },
            "tags_all": {
              "Name": "dr-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nginx_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:security-group/sg-0f09a5eebd7295c23",
            "description": "nginx security group for primary",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f09a5eebd7295c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "primary-nginx-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-nginx-sg"
            },
            "tags_all": {
              "Name": "primary-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds_dr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:security-group/sg-0a8041df6bc93e87c",
            "description": "rds security group for dr",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8041df6bc93e87c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "10.20.0.0/16"
                ],
                "description": "DB access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dr-rds-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-rds-sg"
            },
            "tags_all": {
              "Name": "dr-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:security-group/sg-0503536aded10fd40",
            "description": "rds security group for primary",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0503536aded10fd40",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "10.20.0.0/16"
                ],
                "description": "DB access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "primary-rds-sg",
            "name_prefix": "",
            "owner_id": "804363747200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "primary-rds-sg"
            },
            "tags_all": {
              "Name": "primary-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949753d8282c9011",
            "arn": "arn:aws:ec2:ap-south-1:804363747200:elastic-ip/eipalloc-0949753d8282c9011",
            "association_id": "eipassoc-0073448000e252b0f",
            "domain": "vpc",
            "id": "eipalloc-0949753d8282c9011",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09a502419f5c00296",
            "private_dns": "ip-10-20-1-173.ap-south-1.compute.internal",
            "private_ip": "10.20.1.173",
            "public_dns": "ec2-13-204-166-238.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.166.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ap-south-1-dr-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061e1065d78af8eb9",
            "arn": "arn:aws:ec2:ap-south-1:804363747200:elastic-ip/eipalloc-061e1065d78af8eb9",
            "association_id": "eipassoc-011a59704cb32f06c",
            "domain": "vpc",
            "id": "eipalloc-061e1065d78af8eb9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b63b6816083344f7",
            "private_dns": "ip-10-20-2-134.ap-south-1.compute.internal",
            "private_ip": "10.20.2.134",
            "public_dns": "ec2-13-204-167-152.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.167.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ap-south-1-dr-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:internet-gateway/igw-0e946573af9968545",
            "id": "igw-0e946573af9968545",
            "owner_id": "804363747200",
            "tags": {
              "Name": "ap-south-1-dr-vpc-igw"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-igw"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0949753d8282c9011",
            "association_id": "eipassoc-0073448000e252b0f",
            "connectivity_type": "public",
            "id": "nat-0197347f2490ae5c3",
            "network_interface_id": "eni-09a502419f5c00296",
            "private_ip": "10.20.1.173",
            "public_ip": "13.204.166.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfd22d7df4aee58a",
            "tags": {
              "Name": "ap-south-1-dr-vpc-natgw-1"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-natgw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_eip.nat",
            "module.vpc_dr.aws_internet_gateway.network",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061e1065d78af8eb9",
            "association_id": "eipassoc-011a59704cb32f06c",
            "connectivity_type": "public",
            "id": "nat-0678021a4761cbc33",
            "network_interface_id": "eni-0b63b6816083344f7",
            "private_ip": "10.20.2.134",
            "public_ip": "13.204.167.152",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dc3f58defd3e6f14",
            "tags": {
              "Name": "ap-south-1-dr-vpc-natgw-2"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-natgw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_eip.nat",
            "module.vpc_dr.aws_internet_gateway.network",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e78b0e00ea25821c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0197347f2490ae5c3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e78b0e00ea25821c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_eip.nat",
            "module.vpc_dr.aws_internet_gateway.network",
            "module.vpc_dr.aws_nat_gateway.network",
            "module.vpc_dr.aws_route_table.private",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04588fe4a6f2d09731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0678021a4761cbc33",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04588fe4a6f2d0973",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_eip.nat",
            "module.vpc_dr.aws_internet_gateway.network",
            "module.vpc_dr.aws_nat_gateway.network",
            "module.vpc_dr.aws_route_table.private",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e946573af9968545",
            "id": "r-rtb-052c8d0dbce8b6d4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052c8d0dbce8b6d4d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_internet_gateway.network",
            "module.vpc_dr.aws_route_table.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:route-table/rtb-0e78b0e00ea25821c",
            "id": "rtb-0e78b0e00ea25821c",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0197347f2490ae5c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ap-south-1-dr-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:route-table/rtb-04588fe4a6f2d0973",
            "id": "rtb-04588fe4a6f2d0973",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0678021a4761cbc33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ap-south-1-dr-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:route-table/rtb-052c8d0dbce8b6d4d",
            "id": "rtb-052c8d0dbce8b6d4d",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e946573af9968545",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ap-south-1-dr-vpc-public-rt"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5b24ede78379a5a",
            "route_table_id": "rtb-0e78b0e00ea25821c",
            "subnet_id": "subnet-090a96ecf5684278d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_route_table.private",
            "module.vpc_dr.aws_subnet.private",
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c11a86ffc00f63",
            "route_table_id": "rtb-04588fe4a6f2d0973",
            "subnet_id": "subnet-07a64899499349400"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_route_table.private",
            "module.vpc_dr.aws_subnet.private",
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001db76b77fce80e3",
            "route_table_id": "rtb-052c8d0dbce8b6d4d",
            "subnet_id": "subnet-0dfd22d7df4aee58a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_route_table.public",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ffb46564a01aa5",
            "route_table_id": "rtb-052c8d0dbce8b6d4d",
            "subnet_id": "subnet-0dc3f58defd3e6f14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_route_table.public",
            "module.vpc_dr.aws_subnet.public",
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-045e5cc4b82747334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045e5cc4b82747334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-db-1",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-db-1",
              "Tier": "DB"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-0ce66659e67f804b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce66659e67f804b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-db-2",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-db-2",
              "Tier": "DB"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-090a96ecf5684278d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a96ecf5684278d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-private-1",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-private-1",
              "Tier": "App"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-07a64899499349400",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a64899499349400",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-private-2",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-private-2",
              "Tier": "App"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-0dfd22d7df4aee58a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd22d7df4aee58a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-public-1",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-public-1",
              "Tier": "Web"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:subnet/subnet-0dc3f58defd3e6f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc3f58defd3e6f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-south-1-dr-vpc-public-2",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc-public-2",
              "Tier": "Web"
            },
            "vpc_id": "vpc-0a11aabf515ecc095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_dr.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dr",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:804363747200:vpc/vpc-0a11aabf515ecc095",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-00461943c0399a570",
            "default_route_table_id": "rtb-023c2b67bfe2a81ab",
            "default_security_group_id": "sg-0e89b1edae5d43375",
            "dhcp_options_id": "dopt-06e3a82c18f9e3bc0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a11aabf515ecc095",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023c2b67bfe2a81ab",
            "owner_id": "804363747200",
            "tags": {
              "Name": "ap-south-1-dr-vpc"
            },
            "tags_all": {
              "Name": "ap-south-1-dr-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3e07af901ac8cd",
            "arn": "arn:aws:ec2:us-east-1:804363747200:elastic-ip/eipalloc-0ec3e07af901ac8cd",
            "association_id": "eipassoc-033feb360e7755f32",
            "domain": "vpc",
            "id": "eipalloc-0ec3e07af901ac8cd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c4ab83c30399e0fd",
            "private_dns": "ip-10-10-1-226.ec2.internal",
            "private_ip": "10.10.1.226",
            "public_dns": "ec2-35-175-48-32.compute-1.amazonaws.com",
            "public_ip": "35.175.48.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-main-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0426c8b6ffa870f60",
            "arn": "arn:aws:ec2:us-east-1:804363747200:elastic-ip/eipalloc-0426c8b6ffa870f60",
            "association_id": "eipassoc-036298368a022a528",
            "domain": "vpc",
            "id": "eipalloc-0426c8b6ffa870f60",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0910fe5b2db77a857",
            "private_dns": "ip-10-10-2-12.ec2.internal",
            "private_ip": "10.10.2.12",
            "public_dns": "ec2-3-89-0-65.compute-1.amazonaws.com",
            "public_ip": "3.89.0.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-main-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:internet-gateway/igw-014b772c26da43963",
            "id": "igw-014b772c26da43963",
            "owner_id": "804363747200",
            "tags": {
              "Name": "us-east-1-main-vpc-igw"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-igw"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3e07af901ac8cd",
            "association_id": "eipassoc-033feb360e7755f32",
            "connectivity_type": "public",
            "id": "nat-0b356682fa63e71a1",
            "network_interface_id": "eni-0c4ab83c30399e0fd",
            "private_ip": "10.10.1.226",
            "public_ip": "35.175.48.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a63a20611c1e4f40",
            "tags": {
              "Name": "us-east-1-main-vpc-natgw-1"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-natgw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.network",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0426c8b6ffa870f60",
            "association_id": "eipassoc-036298368a022a528",
            "connectivity_type": "public",
            "id": "nat-0c2d5876c37de36eb",
            "network_interface_id": "eni-0910fe5b2db77a857",
            "private_ip": "10.10.2.12",
            "public_ip": "3.89.0.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da0c7ccc12b3e527",
            "tags": {
              "Name": "us-east-1-main-vpc-natgw-2"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-natgw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.network",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e2d8df8de0b84e121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b356682fa63e71a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2d8df8de0b84e12",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.network",
            "module.vpc_primary.aws_nat_gateway.network",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e60df5e357a01851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c2d5876c37de36eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e60df5e357a0185",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.network",
            "module.vpc_primary.aws_nat_gateway.network",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-014b772c26da43963",
            "id": "r-rtb-046ff1b46f5862c371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-046ff1b46f5862c37",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.network",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:route-table/rtb-0e2d8df8de0b84e12",
            "id": "rtb-0e2d8df8de0b84e12",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b356682fa63e71a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-main-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:route-table/rtb-05e60df5e357a0185",
            "id": "rtb-05e60df5e357a0185",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2d5876c37de36eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-main-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:route-table/rtb-046ff1b46f5862c37",
            "id": "rtb-046ff1b46f5862c37",
            "owner_id": "804363747200",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014b772c26da43963",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-east-1-main-vpc-public-rt"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6616eb406aea26a",
            "route_table_id": "rtb-0e2d8df8de0b84e12",
            "subnet_id": "subnet-0bb65230c7f362ce3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff72aef0a7e611f0",
            "route_table_id": "rtb-05e60df5e357a0185",
            "subnet_id": "subnet-01485e40963f0eeaa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056521f35ad45108a",
            "route_table_id": "rtb-046ff1b46f5862c37",
            "subnet_id": "subnet-0a63a20611c1e4f40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b5cb8a310e08a32",
            "route_table_id": "rtb-046ff1b46f5862c37",
            "subnet_id": "subnet-0da0c7ccc12b3e527"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-0460fe8694bac66d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0460fe8694bac66d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-db-1",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-db-1",
              "Tier": "DB"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-0a06560fff7af1906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a06560fff7af1906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-db-2",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-db-2",
              "Tier": "DB"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-0bb65230c7f362ce3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb65230c7f362ce3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-private-1",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-1",
              "Tier": "App"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-01485e40963f0eeaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01485e40963f0eeaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-private-2",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-2",
              "Tier": "App"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-0a63a20611c1e4f40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a63a20611c1e4f40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-public-1",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-public-1",
              "Tier": "Web"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:subnet/subnet-0da0c7ccc12b3e527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da0c7ccc12b3e527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804363747200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-public-2",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-public-2",
              "Tier": "Web"
            },
            "vpc_id": "vpc-0d8ccef9315090347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804363747200:vpc/vpc-0d8ccef9315090347",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0093931507b9242cf",
            "default_route_table_id": "rtb-0a00bfc094d5ccd0c",
            "default_security_group_id": "sg-051ae7cbe16f63735",
            "dhcp_options_id": "dopt-037b519a6ef7f0ad5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8ccef9315090347",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a00bfc094d5ccd0c",
            "owner_id": "804363747200",
            "tags": {
              "Name": "us-east-1-main-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}